updating the copy; stop gap in locations with hours

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -63,7 +63,7 @@ body {
 
 /* NAVIGATION */
 .navigation {
-  margin-top: 90px;
+  margin-top: 50px;
 }
 
 .centered-pills {  
@@ -75,9 +75,7 @@ body {
 .centered-pills li {
   display: inline
 }
-.centered-pills a {
-  float: left
-}
+
 * html .centered-pills ul.nav-pills, *+html .centered-pills ul.nav-pills {
   display: inline
 }
